# ml_ai25_hw1

./: .gitignore  README.md  REPORT.md  app.py  model_pipeline.pickle  pyproject.toml  requirements.txt
