[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-ai25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "setuptools>=80.9.0",
    "streamlit>=1.52.1",
    "ydata-profiling>=4.18.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "numpy>=1.26.0",
]

[tool.uv.workspace]
members = [
    "profiling-venv",
]
